# coviz

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
coviz/: reading.py  types.py  writing.py
data/: covid_deaths_wa.csv  covid_deaths_wa.csv~  grafana_covid_dashboard.json
scripts/: upload.py
