[tool.poetry]
name = "coviz"
version = "0.1.0"
description = "COVID-19 data visualization"
authors = ["NazarioJL <jlnazario@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
influxdb-client = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
